--- a/index.html
+++ b/index.html
@@ -5,29 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: hsl(36, 45%, 44%); }
   </style>
 </head>
 <body>
+  <div class="contanier">
+    <div class="text">
+      <div class="mobailtext">
+      <h1>Get <span class="insights" style="color: hsla(277, 95%, 47%, 0.4);">insights</span> that help your business grow.</h1>
+      <br><br><br>
+      <p><span class="common">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+         experience, and overall efficiency.</span></p>
+      </div>
 
-  Get insights that help your business grow.
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <div class="about">
+          <p><span class="aboutfigher">10k+ </span><br> <span class="common">COMPANIES</span></p>
+          <p><span class="aboutfigher">314 </span><br> <span class="common">TEMPLATES</span></p> 
+          <p><span class="aboutfigher">12M+ </span><br> <span class="common">QUERIES</span></p>
+        </div>
+        <br><br></b></b>
+    </div>
+    
+    <div class="image">
+      <div class="imagecolor"></div>
+      </div>
+    </div>
   </div>
+  <br><br>
+  <div class="attribution" style="color: white;">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.instagram.com/touseef_pakhtun_0.5/">Teefy Pashteen</a>. <br><br><br>
+  </div>
+  <br>
 </body>
 </html>
